--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,3 +33,36 @@ jobs:
       - run: npm run deploy
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+
+  deploy-documentation:
+    name: Deploy documentation to server
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+
+      - name: 🧱 npm install, build, and test
+        run: |
+          npm i
+          npm run compodoc --if-present
+          # npm run test --if-present
+
+      - name: 🗜️ Zip artifact for deployment
+        run: |
+          cd ./documentations 
+          mkdir ../_release
+          zip ../_release/paystack.zip ./* -r 
+
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ftps9.uk.cloudlogin.co
+          username: herlhay_serene-dev.xyz
+          password: ${{ secrets.ftp_password }}
+          local-dir: ./dist/_release/
+          server-dir: ./paystack
