--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -65,4 +65,4 @@ jobs:
           username: herlhay_serene-dev.xyz
           password: ${{ secrets.ftp_password }}
           local-dir: ./dist/_release/
-          server-dir: ./paystack
+          server-dir: ./paystack/
